# app/ApiDoc/Post/Schemas/PostsApiResponse.php
@@ -8,6 +8,10 @@ use OpenApi\Annotations as OA;
  * @OA\Schema(
  *     type="object",
  *     @OA\Property(
+ *         property="meta",
+ *         ref="#/components/schemas/PaginationMeta"
+ *     ),
+ *     @OA\Property(
  *         property="jsonapi",
  *         type="object",
  *         @OA\Property(
@@ -36,34 +40,11 @@ use OpenApi\Annotations as OA;
  *         )
  *     ),
  *     @OA\Property(
- *         property="data",
- *         type="object",
- *         @OA\Property(
- *             property="type",
- *             type="string",
- *             example="posts"
- *         ),
- *         @OA\Property(
- *             property="id",
- *             type="string",
- *             example="6bb7c993-88ad-402c-9352-c7eb65d9b8e9"
- *         ),
- *         @OA\Property(
- *             property="attributes",
- *             type="array",
- *             @OA\Items(
- *                 ref="#/components/schemas/PostAttributes",
- *             ),
- *         ),
- *         @OA\Property(
- *             property="links",
- *             type="object",
- *             @OA\Property(
- *                 property="self",
- *                 type="string",
- *                 example="http://sever.example/api/v1/posts/6bb7c993-88ad-402c-9352-c7eb65d9b8e9"
- *             )
- *         )
+ *          property="data",
+ *          type="array",
+ *          @OA\Items(
+ *              ref="#/components/schemas/PostApiResource",
+ *          ),
  *     )
  * )
  */
