# app/ApiDoc/User/Schemas/UsersApiResponse.php
@@ -8,6 +8,10 @@ use OpenApi\Annotations as OA;
  * @OA\Schema(
  *     type="object",
  *     @OA\Property(
+ *         property="meta",
+ *         ref="#/components/schemas/PaginationMeta"
+ *     ),
+ *     @OA\Property(
  *         property="jsonapi",
  *         type="object",
  *         @OA\Property(
